# PowerRanger

./: README  mesh.ply
FirstProject/first/: CMakeLists.txt  main.cpp
FirstVisualTest/: .gitignore  CMakeLists.txt  main.cpp
FirstVisualTest/build-FirstVisualTest-JetsonTX2-Default/: CMakeCache.txt  FirstVisualTest.cbp  Project.cbp  cmake_install.cmake
FirstVisualTest/build-FirstVisualTest-JetsonTX2-Default/src/: FirstVisualTest  FirstVisualTest.cbp  cmake_install.cmake
FirstVisualTest/src/: main.cpp
